<resources>
    <string name="app_name">PopcornApp</string>

    <!-- Navigation Menu Items-->
    <string name="navigation_menu_movies_title">Movies</string>
    <string name="navigation_menu_tv_shows_title">TV Shows</string>
    <string name="navigation_menu_actors_title">Actors</string>
    <string name="navigation_menu_about_app_title">About App</string>

    <!-- Movie Fragment -->
    <string name="movie_popular_title">Popular Movies</string>
    <string name="movie_now_playing_title">Now playing</string>
    <string name="movie_top_title">Top Movies</string>
    <string name="movie_upcoming_title">Upcoming Movies</string>

    <!-- Details Activities -->
    <string name="details_story_line_title">Story line</string>
    <string name="details_photos_title">Photos</string>
    <string name="details_cast_title">The cast</string>
    <string name="details_trailer_title">Trailers</string>
    <string name="details_genres_title">Genres</string>
    <string name="details_similarly_title">Similarly</string>

    <string name="details_release_date_title">Release date</string>
    <string name="details_directed_by_title">Directed by</string>
    <string name="details_budget_title">Budget</string>
    <string name="details_revenue_title">Revenue</string>
    <string name="details_original_name_title">Original title</string>
    <string name="details_runtime_title">Runtime</string>

    <!-- TV Shows Fragment -->
    <string name="tv_shows_popular_title">Popular TV Shows</string>
    <string name="tv_shows_now_playing_title">Now on TV </string>
    <string name="tv_shows_top_title">Top Rated TV Shows</string>
    <string name="tv_shows_upcoming_title">TV Shows on The Air</string>

    <!-- Tv Shows Details -->
    <string name="details_tv_show_first_air_date_title">First air date</string>
    <string name="details_tv_show_last_air_date_title">Last air date</string>
    <string name="details_tv_show_networks_title">Networks</string>
    <string name="details_tv_show_created_by_title">Created by</string>
    <string name="details_tv_show_status_title">Show status</string>
    <string name="details_tv_show_seasons_title">Seasons</string>

    <!-- Tv Shows Seasons -->
    <string name="details_tv_show_season_number_title">Season #</string>
    <string name="details_tv_show_season_air_date_title">RD</string>

    <!-- Seasons -->
    <string name="season_overview_title">Overview:</string>
    <string name="season_number_title">S#</string>
    <string name="episode_number_title">Ep#</string>
    <string name="episode_release_date">Release Date:</string>

    <!-- Reviews -->
    <string name="review_author_title">Author:</string>
    <string name="review_no_reviews_title">There are no reviews currently :(</string>

    <!-- Actor -->
    <string name="actor_details_name_title">Name</string>
    <string name="actor_details_age_title">Age</string>
    <string name="actor_details_birth_date_title">Birth date</string>
    <string name="actor_details_death_date_title">Death date</string>
    <string name="actor_details_gender_title">Gender</string>
    <string name="actor_details_birth_place_title">Place of birth</string>
    <string name="actor_details_biography_title">Biography</string>
    <string name="biography_photos_title">Photos</string>
    <string name="actor_movies_acting_title">Title</string>
</resources>
